# myschool

./: Readme.md  index.html  pyproject.toml  script.js  styles.css
